# PCECDI

./: CMakeLists.txt  COPYING  LISEZ-MOI.txt  MainUI.h  PCECDI.pro  README.md  SettingsUI.h  Updater.h  XmlReader.h  main.cpp
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml  codeql.yml  main.yml
Ressources/: Ressources.qrc  Ressources.res
Translations/: PCECDI_de.ts  PCECDI_fr.ts  PCECDI_ru.ts
